--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/TJ-The-Analyst/PortfolioProjects/blob/main/COVID-19%20PORTFOLIO%20PROJECT.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Data Exporation of Covid-19 dataset in Micrsoft SQL Server.</p>
+									<p>Data Exploration of Covid-19 dataset in Micrsoft SQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/TJ-The-Analyst/PortfolioProjects/blob/main/COVID-19%20PORTFOLIO%20PROJECT.sql" class="button">View Project</a></li>
 									</ul>
