--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Terrence Joseph Portfolio<br />
 						</h1>
-						<p> With a Bachelors of Science in Business Administration & Management Degree from CUNY Brooklyn College's Murray Koppelman School of Business, and an interest in Data Analytics and Business Intelligence, I document my projects on my way to becoming a great Data Analyst. <p>Skilled in Excel, SQL, Tableau, Power BI, Python (currently learning)</p> <a href="https://www.linkedin.com/in/terrence-joseph/"><p>@TerrenceJoseph</p></a><br />
+						<p> With a Bachelors of Science in Business Administration & Management Degree from CUNY Brooklyn College's Murray Koppelman School of Business, and an interest in Data Analytics and Business Intelligence. I document my projects on my way to becoming a great Data Analyst. <p>Skilled in Excel, SQL, Tableau, Power BI, Python (currently learning)</p> <a href="https://www.linkedin.com/in/terrence-joseph/"><p>@TerrenceJoseph</p></a><br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
